# MeltedForge

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  next.md
.github/workflows/: cmake-multi-platform.yml  main.yml
MFTest/: CMakeLists.txt  README.md
MFTest/libs/tinyobjloader/: CMakeLists.txt  src.c
MFTest/meshes/: moon_rock.mtl
MFTest/meshes/moon_rock/: moon_rock.mtl
MFTest/meshes/textures/: moon_rock_01_nor_gl_1k.exr  moon_rock_01_rough_1k.exr
MFTest/mftmeshes/Bistro/Interior/: scene.gltf
MFTest/mftmeshes/moon_rock/: moon_rock.mtl
MFTest/mftmeshes/tomaso_p900/: license.txt  scene.gltf
MFTest/mftshaders/: default.frag  default.vert
MFTest/shaders/: default.frag  default.vert
MFTest/src/: main.c  mftest.c  mftest.h  util.h  vertex.h
MeltedForge/: CMakeLists.txt
MeltedForge/libs/nuklear/: CMakeLists.txt  nuklear.c
MeltedForge/libs/nuklear/include/nuklear/: nuklear_glfw_vulkan.h
MeltedForge/libs/stb/: CMakeLists.txt  stb.c
MeltedForge/libs/tinyobj/: CMakeLists.txt  src.c
MeltedForge/libs/tinyobj/include/tinyobj/: tinyobjloader_c.h
MeltedForge/mfassets/shaders/: mfIrradianceConvert.frag  mfIrradianceConvert.frag.spv  mfPrefilterEnvMap.frag  mfPrefilterEnvMap.frag.spv  mfbrdflut.frag  mfbrdflut.frag.spv  mfbrdflut.vert  mfbrdflut.vert.spv  mfshaderutils.glsl  mfshaderutils.h  mfskybox.frag  mfskybox.frag.spv  mfskybox.vert  mfskybox.vert.spv  mfskyboxConvert.frag  mfskyboxConvert.frag.spv  mfskyboxConvert.vert  mfskyboxConvert.vert.spv
MeltedForge/src/: mf.h
MeltedForge/src/mf/: core.c  core.h  mfcore.c  mfcore.h  mfutils.h  renderer.c  renderer.h
MeltedForge/src/mf/backend/: backend_types.h
MeltedForge/src/mf/backend/vulkan/: vkbcknd.c  vkbcknd.h
MeltedForge/src/mf/core/: mfapp.c  mfapp.h  mfarray.c  mfarray.h  mfcore.c  mfcore.h  mfentry.h  mfhashmap.c  mfhashmap.h  mfmaths.c  mfmaths.h  mfprofiler.c  mfprofiler.cpp  mfprofiler.h  mftime.c  mftime.h  mftimer.c  mftimer.h  mfutils.h
MeltedForge/src/mf/ecs/: mfcomponents.h  mfentity.c  mfentity.h  mfscene.c  mfscene.h  mfscene_serialize.c  mfscene_serialize.h
MeltedForge/src/mf/objects/: mfcamera.c  mfcamera.h  mfmesh.c  mfmesh.h  mfmodel.c  mfmodel.h
MeltedForge/src/mf/renderer/: mfbuffer.c  mfbuffer.h  mfcamera.c  mfcamera.h  mfgpu_res.c  mfgpu_res.h  mfgpubuffer.c  mfgpubuffer.h  mfgpuimage.c  mfgpuimage.h  mfgpures.c  mfgpures.h  mfimage.c  mfimage.h  mfmesh.c  mfmesh.h  mfmodel.c  mfmodel.h  mfpipeline.c  mfpipeline.h  mfrender_target.c  mfrender_target.h  mfrenderer.c  mfrenderer.h  mfskybox.c  mfskybox.h  mfutil_types.h
MeltedForge/src/mf/renderer/vk/: backend.c  backend.h  buffer.c  buffer.h  cmd.c  cmd.h  command_buffer.c  command_buffer.h  common.h  ctx.c  ctx.h  fb.c  fb.h  image.c  image.h  pipeline.c  pipeline.h  render_target.h  renderpass.c  renderpass.h  skybox.c  skybox.h
MeltedForge/src/mf/serializer/: mfserializer.c  mfserializer.h  mfserializerutils.h
MeltedForge/src/mf/systems/: material_system.c  material_system.h  mfmaterial_system.c  mfmaterial_system.h
MeltedForge/src/mf/window/: mfinput.c  mfinput.h  mfwindow.c  mfwindow.h
cmake/: global.cmake  mfglobal.cmake
scripts/: CompileShaders.bat  GenMakefilesDebug.bat  GenMakefilesRelease.bat
